--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-component": "0.10.1",
     "babel-polyfill": "6.26.0",
     "base64-js": "^1.3.0",
+    "bigdecimal": "^0.6.1",
     "bpmn-js": "^6.5.1",
     "clipboard": "^2.0.4",
     "driver.js": "^0.8.1",
