--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "babel-plugin-component": "0.10.1",
     "babel-polyfill": "6.26.0",
     "base64-js": "^1.3.0",
-    "bigdecimal": "^0.6.1",
     "bpmn-js": "^6.5.1",
     "clipboard": "^2.0.4",
     "driver.js": "^0.8.1",
@@ -34,6 +33,7 @@
     "gulp-replace": "0.6.1",
     "gulp-shell": "0.6.5",
     "idcard": "^4.1.0",
+    "js-big-decimal": "^1.2.2",
     "json2csv": "^4.1.2",
     "lodash": "4.17.5",
     "moment": "^2.22.1",
