--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,8 @@
         "browsers": ["> 1%", "last 2 versions","IE >= 10"]
       }
     }],
-    "stage-2"
+    "stage-2",
+    "es2015"
   ],
   "plugins": ["transform-vue-jsx", "transform-runtime"],
   "env": {
