--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "0.17.1",
     "babel-plugin-component": "0.10.1",
     "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "base64-js": "^1.3.0",
     "bpmn-js": "^6.5.1",
     "clipboard": "^2.0.4",
@@ -27,7 +28,7 @@
     "element-ui": "^2.13.0",
     "element-ui-verify": "^1.1.5",
     "file-saver": "^2.0.0",
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-load-plugins": "1.5.0",
     "gulp-replace": "0.6.1",
@@ -61,11 +62,11 @@
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
-    "babel-core": "6.22.1",
+    "babel-core": "^6.22.1",
     "babel-eslint": "7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "21.0.2",
-    "babel-loader": "7.1.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
